serviceMesh/perf_exp/k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      nodeSelector:
        app-tier: client
      containers:
      - name: client
        image: service-mesh-demo:latest
        imagePullPolicy: Never
        command: ["sleep", "infinity"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
    app-tier: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
        app-tier: service
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "4Gi"
        sidecar.istio.io/proxyCPULimit: "4"
    spec:
      nodeSelector:
        app-tier: service
      containers:
      - name: service-a
        image: service-mesh-demo:latest
        imagePullPolicy: Never
        command: ["./service-a"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
    app-tier: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        app-tier: service
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "4Gi"
        sidecar.istio.io/proxyCPULimit: "4"
    spec:
      nodeSelector:
        app-tier: service
      containers:
      - name: service-b
        image: service-mesh-demo:latest
        imagePullPolicy: Never
        command: ["./service-b"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
  - port: 80
    targetPort: 80
