serviceMesh/perf_exp/istio_config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b-retry
spec:
  hosts:
  - service-b
  http:
  - route:
    - destination:
        host: service-b
